syntax = "proto3";

message c_account_simple_player
{
  uint64 player_id = 1;
}

message Tips
{
  uint32 id = 1;
  repeated string param = 2;
}

message NodeInfo
{
  uint32 node_id = 1;
  uint32 node_type = 2;
  uint64 launch_time = 3;
}

message ConnetionParam
{
  string ip = 1;
  uint32 port = 2;
  string db_host = 3;
  string db_user = 4;
  string db_password = 5;
  uint32 db_port = 6;
  string db_dbname = 7;
}

message ConnetionParamJsonFormat
{
  repeated ConnetionParam data = 1;
}

message GameConfigInfo
{
  uint32 group_id = 1;
  uint32 lobby_id = 2;
  uint32 loglevel = 3;
  uint32 server_type = 4;
}

message LobbyConfigInfo
{
  uint32 lobby_id = 1;
  uint32 loglevel = 3;
}

message IpPort
{
  string ip = 1;
  uint32 port = 2;
}

message MessageBody
{
  uint64 id = 1;
  bytes body = 2;
  uint32 msg_id = 3;
}

message NodeMessageBody
{
  uint32 node_id = 1;
  uint64 session_id = 2;
  uint64 player_id = 3;
}

message NodeServiceMessageRequest
{
  MessageBody msg = 1;
  NodeMessageBody ex = 2;
}

message NodeServiceMessageResponse
{
  MessageBody msg = 1;
  NodeMessageBody ex = 2;
}

message RouteNodeMessageBody
{
	uint32 node_id = 1;
}


message PlayerMessageExtern
{
  uint64 player_id = 1;
}

message PlayerNodeServiceRequest
{
  MessageBody msg = 1;
  PlayerMessageExtern ex = 2;
}

message PlayerMessageRespone
{
  MessageBody msg = 1;
  PlayerMessageExtern ex = 2;
}

message PlayerRouteMessageExtern
{
  uint64 player_id = 1;
}

message RouteMessageExtern
{
}

message RouteMessageBody
{
   uint64 id = 1;
   bytes body = 2;
   NodeInfo src_node_info = 3;
   PlayerRouteMessageExtern player_ex = 4;
   RouteMessageExtern route_ex = 5;
}

message RouteMsgStringRequest
{
  repeated RouteMessageBody msg_string = 1;
}

message RouteMsgStringResponse
{
  repeated RouteMessageBody msg_string = 1;
}
